# Arquitectura-Computadores

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  checkCoreGuidelines.sh  clang-errors  clang-errors.txt  clang-tidy.txt  leer  updateAvignon.sh
cachegrind/: cachegrind.out.16711  callgrind.out.17277
files/: 1
files/archivos_pruebas/: pepe.fld
files/results/: large-1.fld  large-1000.fld  large-2.fld  large-5.fld  small-1.fld  small-2.fld  small-5.fld
fluid/: CMakeLists.txt  fluid.cpp
ftest/: CMakeLists.txt  diff_test.sh  run_diff.sh  run_test.sh
pruebas/: leer.cpp  salida.txt
results/: med1
scripts/: buid-avignon.sh  del.sh  diff.py  getID.py  leer.cpp  leertraza.cpp  perf-energia-10.sh  perf-energia-100.sh  perf-energia-1000.sh  perf10.sh  perf100.sh  perf1000.sh  run.sh  run10.sh  run100.sh  run5.sh  setupLeer.sh  setupTrazas.sh  valgrind-10.sh
sim/: CMakeLists.txt  block.cpp  block.hpp  common.hpp  grid.cpp  grid.hpp  progargs.cpp  progargs.hpp
sim/soa/: CMakeLists.txt  block_soa.cpp  block_soa.hpp  grid_soa.cpp  grid_soa.hpp
utest/: CMakeLists.txt  block_test.cpp  block_test.hpp  gridSoA_test.cpp  gridTest.cpp  gridTest.hpp  gridTestSoA.cpp  gridTestSoA.hpp  grid_test.cpp  grid_test.hpp  progargs_test.cpp  utests.cpp
